--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -15,6 +15,7 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.1",
     "com.unity.xr.management": "4.4.1",
+    "com.unity.xr.mock-hmd": "1.4.0-preview.2",
     "com.unity.xr.oculus": "4.1.2",
     "com.virtualcast.osccore": "https://github.com/virtual-cast/OscCore.git",
     "com.unity.modules.ai": "1.0.0",
